done responsive and email validator

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
           <p>Fylo stores your most important files in one secure location. Access them wherever you need, share and collaborate with friends, family, and co-workers.
           </p>
           <form class="flex">
-            <input type="text" placeholder="Enter your email..">
-            <div class="blue__Button">Get Started</div>
+              <input class="input1" type="text" placeholder="Enter your email..">
+              <div class="blue__Button submit__start1">Get Started</div>
+            <p class="invalid1"></p>
           </form>
         </div>
 
@@ -78,8 +79,9 @@
         <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
       </div>
       <div class="start__Free flex">
-        <input type="text" placeholder="email@example.com">
-        <div class="blue__Button">Get Started For Free</div>
+          <input class="input" type="text" placeholder="email@example.com">
+          <p class="invalid"></p>
+        <div class="blue__Button submit__start">Get Started For Free</div>
       </div>
     </section>
 
